# blender_tts

./: .gitignore  README.md  makezip.sh  pyproject.toml
.github/actions/setup-blender/: action.yml
.github/workflows/: package.yml  publish.yml  setup-blender.yml
tests/: test_tts.py
tts_narration/: __init__.py
tts_narration/core/: config.py  file_manager.py
tts_narration/handlers/: base.py  gtts.py  pyttsx3.py
tts_narration/operators/: cleanup.py  copy_path.py  export_list.py  generate.py  refresh.py
tts_narration/ui/: panel.py  preferences.py
vocal_vse/: __init__.py
vocal_vse/core/: __init__.py  config.py  file_manager.py
vocal_vse/handlers/: gtts.py  pyttsx3.py
vocal_vse/operators/: cleanup.py  copy_path.py  export_list.py  generate.py  refresh.py  reload_voices.py
vocal_vse/tts/: __init__.py  cmd.py  gtts.py  pyttsx3.py
vocal_vse/ui/: panel.py  preferences.py
