[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-tts-narration"
version = "0.2.2"
description = "Blender VSE add-on: Generate narration from text strips"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{name = "Jet-Logic"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Multimedia :: Video",
  "Framework :: Blender"
]
keywords = ["blender", "tts", "text-to-speech", "vse", "video editing"]