[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vocal-vse"
version = "0.3.1"
description = "Blender VSE add-on: Vocal VSE - Generate voiceover narration from text strips"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{name = "Jet-Logic"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Multimedia :: Video",
  "Framework :: Blender"
]
keywords = ["blender", "tts", "text-to-speech", "vse", "video editing"]